# sbm-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: manual.md
docs/superpowers/plans/: 2026-04-08-sbm-cli.md  2026-04-13-keychain-password-storage.md
docs/superpowers/specs/: 2026-04-08-sbm-cli-design.md  2026-04-13-keychain-design.md
sbm_cli/: cli.py  client.py  config.py  credentials.py  formatters.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_credentials.py  test_formatters.py
tests/integration/: test_live.py
