[project]
name = "sbm-cli"
version = "0.1.0"
description = "CLI client for SBM 12.0 JSON API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.32",
    "rich>=13.0",
]

[project.scripts]
sbm = "sbm_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires live SBM connection (skipped by default)",
]
