[project]
name = "sbm-cli"
version = "0.2.0"
description = "CLI client for SBM 12.0 JSON API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Otakar Dokoupil" }]
keywords = ["sbm", "serena", "itsm", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "keyring>=25.0",
    "requests>=2.32",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/xdoko01/sbm-cli"

[project.scripts]
sbm = "sbm_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires live SBM connection (skipped by default)",
]
